# split-xml-gyn

./: .gitignore  configuracoes.json  create_service.bat  main.py  pyproject.toml
src/: functions.py  process.py  read_xml.py  save_xml.py
